--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>VanillaJs clock</title>
+        <style>
+            li {
+                padding: 0;
+                margin: 0;
+            }
+            .form,
+            .greeting {
+                display: none;
+            }
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>VanillaJs clock</title>
-	<style>
-		.form,
-		.greeting {
-			display: none;
-		}
+            .showing {
+                display: block;
+            }
+        </style>
+    </head>
 
-		.showing {
-			display: block;
-		}
-	</style>
-</head>
-
-<body>
-	<div class="js_clock">
-		<h1 class="js_title">Title</h1>
-		<form class="js_form form">
-			<input type="text" name="form_input" placeholder="내용 저장" />
-		</form>
-		<h3 class="greeting"></h3>
-	</div>
-	<script src="index.js"></script>
-</body>
-
+    <body>
+        <div class="js_clock">
+            <h1 class="js_title">00:00:00</h1>
+            <form class="js_form form">
+                <input type="text" name="form_input" placeholder="이름" />
+            </form>
+            <h3 class="greeting"></h3>
+            <form class="js_toDoForm">
+                <input type="text" class="todo_input" placeholder="목록 등록" />
+            </form>
+            <ol class="js_toDoList"></ol>
+        </div>
+        <script src="index.js"></script>
+        <script src="todo.js"></script>
+    </body>
 </html>
