--- a/index.html
+++ b/index.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>VanillaJs clock</title>
+        <style>
+            body {
+                background: #2c3e50;
+            }
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<title>VanillaJs clock</title>
-	<style>
-		body {
-			background: #2c3e50;
-		}
+            li {
+                padding: 0;
+                margin: 0;
+                color: #fff;
+            }
 
-		li {
-			padding: 0;
-			margin: 0;
-			color: #fff;
-		}
+            .js_title {
+                color: #fff;
+            }
 
-		.js_title {
-			color: #fff;
-		}
+            .form,
+            .greeting {
+                display: none;
+                color: #fff;
+            }
 
-		.form,
-		.greeting {
-			display: none;
-			color: #fff;
-		}
+            .showing {
+                display: block;
+            }
 
-		.showing {
-			display: block;
-		}
+            @keyframes fadeIn {
+                from {
+                    opacity: 0;
+                }
 
-		@keyframes fadeIn {
-			from {
-				opacity: 0;
-			}
+                to {
+                    opacity: 1;
+                }
+            }
 
-			to {
-				opacity: 1;
-			}
-		}
+            .bg_image {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+                margin: auto;
+                /* height: 100%; */
+                z-index: -1;
+                animation: fadeIn 0.5s linear;
+            }
+            .js_weather {
+                color: #fff;
+            }
+        </style>
+    </head>
 
-		.bg_image {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			width: 100%;
-			max-width: 100%;
-			height: auto;
-			margin: auto;
-			/* height: 100%; */
-			z-index: -1;
-			animation: fadeIn .5s linear;
-		}
-	</style>
-</head>
-
-<body>
-	<div class="js_clock">
-		<h1 class="js_title">00:00:00</h1>
-		<form class="js_form form">
-			<input type="text" name="form_input" placeholder="이름" />
-		</form>
-		<h3 class="greeting"></h3>
-		<form class="js_toDoForm">
-			<input type="text" class="todo_input" placeholder="목록 등록" />
-		</form>
-		<ol class="js_toDoList"></ol>
-		<span class="js_weather"></span>
-	</div>
-	<script src="index.js"></script>
-	<script src="todo.js"></script>
-	<script src="weather.js"></script>
-</body>
-
+    <body>
+        <div class="js_clock">
+            <h1 class="js_title">00:00:00</h1>
+            <form class="js_form form">
+                <input type="text" name="form_input" placeholder="이름" />
+            </form>
+            <h3 class="greeting"></h3>
+            <form class="js_toDoForm">
+                <input type="text" class="todo_input" placeholder="목록 등록" />
+            </form>
+            <ol class="js_toDoList"></ol>
+            <span class="js_weather"></span>
+        </div>
+        <script src="index.js"></script>
+        <script src="todo.js"></script>
+        <script src="weather.js"></script>
+    </body>
 </html>
