--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                 color: #fff;
             }
 
+            .js_clock {
+                position: fixed;
+                top: 0;
+                left: 10px;
+            }
+
             .js_title {
                 color: #fff;
             }
